<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/spielname" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/user" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/computer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/userSpielStandText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/userSpielStand" />

        <TextView
            android:id="@+id/computerSpielStandText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/computerSpielStand" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/auswahl" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/schereButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/schere"
            android:gravity="center_horizontal"
            android:text="@string/schere" />

        <Button
            android:id="@+id/steinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/stein"
            android:gravity="center_horizontal"
            android:text="@string/stein" />

        <Button
            android:id="@+id/papierButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/papier"
            android:gravity="center_horizontal"
            android:text="@string/papier" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/computerAuswahl" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/computerAuswahl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/computerneutral"
            android:gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>